RESOLVED FIXED311107
REGRESSION (? - Safari 26.4): Spans stacking incorrectly - acting as block level rather than inline
https://bugs.webkit.org/show_bug.cgi?id=311107
Summary REGRESSION (? - Safari 26.4): Spans stacking incorrectly - acting as block le...
david
Reported 2026-03-30 07:40:16 PDT
Created attachment 478846 [details] Example of layout bug https://theradavist.com Under each article, on the lower right corner, there's an svg graphic of a small voice balloon, with the number of comments of each article inside. In other browsers (Firefox, Chrome), and in previous versions of Safari, this displayed correctly - the text was nested inside the svg. Now, as of MacOS 26.4 Safari, these elements are stacked vertically on the page.
Attachments
Example of layout bug (218.30 KB, image/png)
2026-03-30 07:40 PDT, david
no flags
Test reduction (233 bytes, text/html)
2026-03-30 16:49 PDT, alan
no flags
Patch (7.40 KB, patch)
2026-03-30 19:28 PDT, alan
no flags
[fast-cq]Patch (44.76 KB, patch)
2026-03-31 05:20 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2026-03-30 14:33:47 PDT
alan
Comment 2 2026-03-30 16:49:24 PDT
Created attachment 478851 [details] Test reduction
alan
Comment 3 2026-03-30 19:28:13 PDT
alan
Comment 4 2026-03-30 19:31:13 PDT
Thanks for filing this bug report, David!
alan
Comment 5 2026-03-31 05:20:26 PDT
Created attachment 478859 [details] [fast-cq]Patch
EWS
Comment 6 2026-03-31 09:08:30 PDT
Committed 310313@main (032ddbdc655e): <https://commits.webkit.org/310313@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478859 [details].
Brent Fulgham
Comment 7 2026-04-29 10:09:23 PDT
This change is present in Safari Technology Preview 242. Please install that revision or newer to confirm the fix. Release notes: https://webkit.org/blog/17934/release-notes-for-safari-technology-preview-242/
Brent Fulgham
Comment 8 2026-04-29 11:46:14 PDT
This change is present in Safari Technology Preview 241. Please install that revision or newer to confirm the fix. Release notes: https://webkit.org/blog/17917/release-notes-for-safari-technology-preview-241/
Note You need to log in before you can comment on or make changes to this bug.