Nested empty inline boxes accumulate incorrect vertical offset https://bugs.webkit.org/show_bug.cgi?id=311107 <rdar://173723162>

Reviewed by Antti Koivisto.

When an empty line has nested inline boxes (e.g. <span><span><span>...</span></span></span>),
simplifiedVerticalAlignment sets every non-root inline box's logicalTop
to rootInlineBoxAscent. Since logicalTop is parent-relative, this causes
each nesting level to accumulate an additional offset (N * ascent for N
levels of nesting), pushing absolutely positioned descendants down.

Fix by only setting rootInlineBoxAscent on direct children of the root
inline box. Nested inline boxes get logicalTop 0, placing them at their
parent's position.

* LayoutTests/imported/w3c/web-platform-tests/css/css-position/nested-inline-abspos-child-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-position/nested-inline-abspos-child-with-siblings-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-position/nested-inline-abspos-child-with-siblings.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-position/nested-inline-abspos-child.html: Added.
* LayoutTests/platform/glib/fast/encoding/utf-16-big-endian-expected.txt:
* LayoutTests/platform/glib/fast/encoding/utf-16-little-endian-expected.txt:
* LayoutTests/platform/glib/fast/invalid/007-expected.txt:
* LayoutTests/platform/glib/tables/mozilla/bugs/bug113235-3-expected.txt:
* LayoutTests/platform/glib/tables/mozilla/bugs/bug2267-expected.txt:
* LayoutTests/platform/glib/tables/mozilla/other/ms-expected.txt:
* LayoutTests/platform/ios/fast/invalid/007-expected.txt:
* LayoutTests/platform/ios/tables/mozilla/bugs/bug113235-3-expected.txt:
* LayoutTests/platform/ios/tables/mozilla/bugs/bug2267-expected.txt:
* LayoutTests/platform/ios/tables/mozilla/other/ms-expected.txt:
* LayoutTests/platform/mac/fast/encoding/utf-16-big-endian-expected.txt:
* LayoutTests/platform/mac/fast/encoding/utf-16-little-endian-expected.txt:
* LayoutTests/platform/mac/fast/invalid/007-expected.txt:
* LayoutTests/platform/mac/tables/mozilla/bugs/bug113235-3-expected.txt:
* LayoutTests/platform/mac/tables/mozilla/bugs/bug2267-expected.txt:
* LayoutTests/platform/mac/tables/mozilla/other/ms-expected.txt:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxVerticalAligner.cpp:
(WebCore::Layout::LineBoxVerticalAligner::simplifiedVerticalAlignment const):

Canonical link: https://commits.webkit.org/310313@main